# Programming-Paradigms

M1-Real Time Embedded Systems/Task1.1P/: Sense-Think-Act Board.ino
M1-Real Time Embedded Systems/Task1.2P/: Interrupt_Driven_Board.ino
M1-Real Time Embedded Systems/Task1.3C/: Multiple_Inputs_Interrupt.ino
M1-Real Time Embedded Systems/Task1.4D/: More_Inputs_Board.ino
M2-Concurrent Programming/Task2.1P/: m2_t1p_omp.cpp  m2_t1p_opm.cpp  m2_t1p_par.cpp  m2_t1p_seq.cpp  opm_output.txt  par_output.txt  seq_output.txt
M2-Concurrent Programming/Task2.3D/: m2_t3d_traffic_data.cpp  m2_t3d_traffic_par.cpp  m2_t3d_traffic_seq.cpp  traffic_test_data.txt
M3-Distributed Programming/Task3.1P/: mpi_cl_mm.cpp  mpi_mm.cpp  mpi_omp_mm.cpp
M4-Blockchain_Project/Blockchain_Project_V1_Basic/: CMakeLists.txt
M4-Blockchain_Project/Blockchain_Project_V2_Storage/: CMakeLists.txt
M4-Blockchain_Project/Blockchain_Project_V3_Final_Distributed/: CMakeLists.txt
M4-Blockchain_Project/Blockchain_Project_V3_Final_Distributed/src/: main.cpp
M4-Blockchain_Project/Blockchain_Project_V3_Final_Distributed/src/blockchain/: CBlock.cpp  CBlock.h  CChain.cpp  CChain.h  CLog.cpp  CLog.h
M4-Blockchain_Project/Blockchain_Project_V3_Final_Distributed/src/blockchain/net/: CClient.cpp  CClient.h  CNodeInfo.h  CPacket.h  CServer.cpp  CServer.h  EMessageType.h  INet.cpp  INet.h
M4-Blockchain_Project/Blockchain_Project_V3_Final_Distributed/src/blockchain/storage/: CStorageLocal.cpp  CStorageLocal.h  CStorageNone.h  EStorageType.h  IStorage.h  storage.cpp  storage.h
(+46 files in other folders)
